Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-743

compile error with GHC 6.12.1

    XMLWordPrintableJSON

Details

    • Patch Available

    Description

      The Haskell bindings do not compile with GHC 6.12.1, because rec seems to be a reserved word in that version.

      Attachments

        1. v4-rename-proc-rec-keywords.patch
          7 kB
          Christian Lavoie
        2. v3-thrift-compile-errors.patch
          6 kB
          Christian Lavoie
        3. ghc-6.12.1-compile-problem-patch-v2.txt
          6 kB
          Martin Grabmueller
        4. ghc-6.12.1-compile-problem-patch.txt
          2 kB
          Martin Grabmueller

        Activity

          People

            clavoie Christian Lavoie
            mgrabmueller Martin Grabmueller
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: