THRIFT-743: seems to compile and doesn't break other tests, so seems fine for now

git-svn-id: https://svn.apache.org/repos/asf/incubator/thrift/trunk@1001353 13f79535-47bb-0310-9956-ffa450edef68